--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,16 @@ body {
     font-family: 'Quicksand', sans-serif;
 }
 
+
+/* 링크 가로줄에 두기 */
+ul {
+    padding: 0;
+}
+
+li {
+    display: inline-block;
+}
+
 .welcome-header {
     margin: 90px 0px;
     text-align: center;
